--- a/test.tex
+++ b/test.tex
@@ -1,3 +1,35 @@
+
+
+
+theorem:
+    name:
+        Rudin 6.4
+    statement:
+        $\M(X, \A)$ is a normed space w.r.t. $||\nu|| := \nu(X) \fall \nu \in \M(X, \A)$.
+    proof:
+        $|| \nu_1 + \nu_2 || = |\nu_1 + \nu_2|(X) \le |\nu_1|(X) + |\nu_2|(X) = ||\nu_1|| + ||\nu_2|| $. $||\lambda \nu|| = |\lambda \nu|(X) = |\lambda| |\nu|(X) = |\lambda| ||\nu||$. $||\nu||(X) = |\nu|(X) \ge 0$, $||\nu|| = 0 \rimply |\nu|(X) = 0 \rimply 0 = |\nu|(X) \ge |\nu|(E) \ge |\nu(E)| \fall E \in \A \rimply$ $\nu = 0$.
+    remarks:
+        Write $\M(X,\A)$ or $\M(\A)$ for the set of all complex or signed and finite measures on $\A$.
+        Write $\M^\pm(X,\A)$ or $\M^\pm(\A)$ for the set of all signed and finite measures on $\A$.
+        Write $\M^+(X,\A)$ or $\M^+(\A)$ for the set of all positive measures on $\A$. 
+        Positive measures need not be finite, so $\M^+(\A) \not \subset \M(\A)$.
+
+
+theorem:
+    name:
+        Rudin 6.5
+    statement,tex:
+        $\M(X, \A)$ is a normed space w.r.t. $||\nu|| := \nu(X) \fall \nu \in \M(X, \A)$.
+    proof,tex:
+        $|| \nu_1 + \nu_2 || = |\nu_1 + \nu_2|(X) \le |\nu_1|(X) + |\nu_2|(X) = ||\nu_1|| + ||\nu_2|| $. $||\lambda \nu|| = |\lambda \nu|(X) = |\lambda| |\nu|(X) = |\lambda| ||\nu||$. $||\nu||(X) = |\nu|(X) \ge 0$, $||\nu|| = 0 \rimply |\nu|(X) = 0 \rimply 0 = |\nu|(X) \ge |\nu|(E) \ge |\nu(E)| \fall E \in \A \rimply$ $\nu = 0$.
+    remarks,tex:
+        Write $\M(X,\A)$ or $\M(\A)$ for the set of all complex or signed and finite measures on $\A$.
+        Write $\M^\pm(X,\A)$ or $\M^\pm(\A)$ for the set of all signed and finite measures on $\A$.
+        Write $\M^+(X,\A)$ or $\M^+(\A)$ for the set of all positive measures on $\A$. 
+        Positive measures need not be finite, so $\M^+(\A) \not \subset \M(\A)$.
+
+
+
 """
 
 %<<setup>>
@@ -38,60 +70,7 @@ $|| \nu_1 + \nu_2 || = |\nu_1 + \nu_2|(X) \le |\nu_1|(X) + |\nu_2|(X) = ||\nu_1|
 
 
 
-
-theorem:
-    name:
-        Rudin 6.4
-    statement:
-        $\M(X, \A)$ is a normed space w.r.t. $||\nu|| := \nu(X) \fall \nu \in \M(X, \A)$.
-    proof:
-        $|| \nu_1 + \nu_2 || = |\nu_1 + \nu_2|(X) \le |\nu_1|(X) + |\nu_2|(X) = ||\nu_1|| + ||\nu_2|| $. $||\lambda \nu|| = |\lambda \nu|(X) = |\lambda| |\nu|(X) = |\lambda| ||\nu||$. $||\nu||(X) = |\nu|(X) \ge 0$, $||\nu|| = 0 \rimply |\nu|(X) = 0 \rimply 0 = |\nu|(X) \ge |\nu|(E) \ge |\nu(E)| \fall E \in \A \rimply$ $\nu = 0$.
-    remarks:
-        Write $\M(X,\A)$ or $\M(\A)$ for the set of all complex or signed and finite measures on $\A$.
-        Write $\M^\pm(X,\A)$ or $\M^\pm(\A)$ for the set of all signed and finite measures on $\A$.
-        Write $\M^+(X,\A)$ or $\M^+(\A)$ for the set of all positive measures on $\A$. 
-        Positive measures need not be finite, so $\M^+(\A) \not \subset \M(\A)$.
-
-theorem:
-    name:
-        Rudin 6.5
-    statement:
-        $\M(X, \A)$ is a normed space w.r.t. $||\nu|| := \nu(X) \fall \nu \in \M(X, \A)$.
-    proof:
-        $|| \nu_1 + \nu_2 || = |\nu_1 + \nu_2|(X) \le |\nu_1|(X) + |\nu_2|(X) = ||\nu_1|| + ||\nu_2|| $. $||\lambda \nu|| = |\lambda \nu|(X) = |\lambda| |\nu|(X) = |\lambda| ||\nu||$. $||\nu||(X) = |\nu|(X) \ge 0$, $||\nu|| = 0 \rimply |\nu|(X) = 0 \rimply 0 = |\nu|(X) \ge |\nu|(E) \ge |\nu(E)| \fall E \in \A \rimply$ $\nu = 0$.
-    remarks:
-        Write $\M(X,\A)$ or $\M(\A)$ for the set of all complex or signed and finite measures on $\A$.
-        Write $\M^\pm(X,\A)$ or $\M^\pm(\A)$ for the set of all signed and finite measures on $\A$.
-        Write $\M^+(X,\A)$ or $\M^+(\A)$ for the set of all positive measures on $\A$. 
-        Positive measures need not be finite, so $\M^+(\A) \not \subset \M(\A)$.
-
-
-
-
-
-
-
-
-
-
 """
-(theorem
-    (name Rudin 6.4)
-    (statement "la shdfjskfsdf")
-    (proof "blahshasdsdF")
-    (remarks
-        "bkashdsafsdf"
-        "hsafkjsfsdF"
-        "sldhfkjdsfsdf")) 
-"""
-
-
-
-
-
-"""
-
-
 
 
 
@@ -724,13 +703,4 @@ Proof: 4) $\mu \ll \mu$, $\nu \ll \nu$, and $\frac{d\mu}{d\mu} = 1 = \frac{d\nu}
 
 
 
-
-
-
-
-
-
 """
-
-
-
