--- a/test.pre.tex
+++ b/test.pre.tex
@@ -14,13 +14,23 @@ document:
             Write $\M^\pm(X,\A)$ or $\M^\pm(\A)$ for the set of all signed and finite measures on $\A$.
             Write $\M^+(X,\A)$ or $\M^+(\A)$ for the set of all positive measures on $\A$. 
             Positive measures need not be finite, so $\M^+(\A) \not \subset \M(\A)$.
-
-
+        
     theorem:
-        statement:
+        statement,a,b,c,d:
             blah blah blah $\M(X, \A)$ is azhadthaaehah $l \nu \in \M(X, \A)$.
         proof:
             $\nu_2|(X) \le |\nu_1|(X) + |\nu_2|(X) $
+
+
+
+
+
+
+
+
+
+
+
 
 
 
