--- a/test_case/out.tex
+++ b/test_case/out.tex
@@ -28,6 +28,7 @@
 
 
 
+
 \newcommand{\pset}[1]{ \mathcal{P}(#1) }
 \newcommand{\partset}[1]{ \mathcal{P}^{*}(#1) }
 \newcommand{\st}[0]{ \textrm{ s.t. } }
@@ -83,4 +84,16 @@
 
 \begin{document}
 
+
+    
+{\bf Theorem: (Rudin 6.4)}
+
+    
+{\bf Theorem: }
+
+    
+{\bf Corollary: (Lebesgue Decomposition of $\nu$ w.r.t $\mu$.)}
+
+
 \end{document}
+
